@@ -28,3 +28,11 @@
 </table>
 </jwc>
 
+<hr>
+
+<h1>Application</h1>
+
+<jwc id="insertByteCount"/> bytes:
+<pre><jwc id="insertSerializedApplication"/></pre>
+
+
